authentication screens done, with integration to backend

--- a/app.json
+++ b/app.json
@@ -22,7 +22,12 @@
       }
     },
     "web": {
+      "bundler": "metro",
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [
+      "expo-router"
+    ],
+    "scheme": "fitnessapp"
   }
 }
